--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="sequencer">
       <div class="kick-track">
         <div class="controls">
-          <h1>Kick</h1>
+          <h3>Kick</h3>
           <button data-track="0" class="mute kick-volumn">
             <i class="fas fa-volume-mute"></i>
           </button>
@@ -44,7 +44,7 @@
 
       <div class="snare-track">
         <div class="controls">
-          <h1>Snare</h1>
+          <h3>Snare</h3>
           <button data-track="1" class="mute snare-volumn">
             <i class="fas fa-volume-mute"></i>
           </button>
@@ -71,7 +71,7 @@
 
       <div class="hihat-track">
         <div class="controls">
-          <h1>Hihat</h1>
+          <h3>Hihat</h3>
           <button data-track="2" class="mute hihat-volumn">
             <i class="fas fa-volume-mute"></i>
           </button>
@@ -96,61 +96,10 @@
         </div>
       </div>
 
-      <div class="clap-track">
-        <div class="controls">
-          <h1>Clap</h1>
-          <button data-track="3" class="mute clap-volumn">
-            <i class="fas fa-volume-mute"></i>
-          </button>
-          <select name="clap-select" id="clap-select">
-            <option value="./sounds/clap-analog.wav">Clap Analog</option>
-            <option value="./sounds/clap-crushed.wav">Clap Crush</option>
-            <option value="./sounds/clap-slapper.wav">Clap Slapper</option>
-            <option value="./sounds/clap-tape.wav">Clap Tape</option>
-            <option value="./sounds/clap-808.wav">Clap 808</option>
-            <option value="./sounds/clap-fat.wav">Clap Fat</option>
-          </select>
-        </div>
-        <div class="clap">
-          <div class="pad clap-pad b0"></div>
-          <div class="pad clap-pad b1"></div>
-          <div class="pad clap-pad b2"></div>
-          <div class="pad clap-pad b3"></div>
-          <div class="pad clap-pad b4"></div>
-          <div class="pad clap-pad b5"></div>
-          <div class="pad clap-pad b6"></div>
-          <div class="pad clap-pad b7"></div>
-        </div>
-      </div>
-
-      <div class="crash-track">
-        <div class="controls">
-          <h1>Crash</h1>
-          <button data-track="4" class="mute crash-volumn">
-            <i class="fas fa-volume-mute"></i>
-          </button>
-          <select name="crash-select" id="crash-select">
-            <option value="./sounds/crash-acoustic.wav">Crash Classic</option>
-            <option value="./sounds/crash-808.wav">Crash 808</option>
-            <option value="./sounds/crash-noise.wav">Crash Noise</option>
-            <option value="./sounds/crash-tape.wav">Crash Tape</option>
-          </select>
-        </div>
-        <div class="crash">
-          <div class="pad crash-pad b0"></div>
-          <div class="pad crash-pad b1"></div>
-          <div class="pad crash-pad b2"></div>
-          <div class="pad crash-pad b3"></div>
-          <div class="pad crash-pad b4"></div>
-          <div class="pad crash-pad b5"></div>
-          <div class="pad crash-pad b6"></div>
-          <div class="pad crash-pad b7"></div>
-        </div>
-      </div>
 
       <div class="openhat-track">
         <div class="controls">
-          <h1>Openhat</h1>
+          <h3>Openhat</h3>
           <button data-track="5" class="mute openhat-volumn">
             <i class="fas fa-volume-mute"></i>
           </button>
@@ -176,63 +125,10 @@
         </div>
       </div>
 
-      <div class="perc-track">
-        <div class="controls">
-          <h1>Perc</h1>
-          <button data-track="6" class="mute perc-volumn">
-            <i class="fas fa-volume-mute"></i>
-          </button>
-          <select name="perc-select" id="perc-select">
-            <option value="./sounds/perc-808.wav">Perc 808</option>
-            <option value="./sounds/perc-chirpy.wav">Perc Chirpy</option>
-            <option value="./sounds/perc-hollow.wav">Perc Hollow</option>
-            <option value="./sounds/perc-laser.wav">Perc Laser</option>
-            <option value="./sounds/perc-metal.wav">Perc Metal</option>
-            <option value="./sounds/perc-nasty.wav">Perc Nasty</option>
-          </select>
-        </div>
-        <div class="perc">
-          <div class="pad perc-pad b0"></div>
-          <div class="pad perc-pad b1"></div>
-          <div class="pad perc-pad b2"></div>
-          <div class="pad perc-pad b3"></div>
-          <div class="pad perc-pad b4"></div>
-          <div class="pad perc-pad b5"></div>
-          <div class="pad perc-pad b6"></div>
-          <div class="pad perc-pad b7"></div>
-        </div>
-      </div>
 
-      <div class="tom-track">
+      <div class="exhaust-track">
         <div class="controls">
-          <h1>Tom</h1>
-          <button data-track="7" class="mute tom-volumn">
-            <i class="fas fa-volume-mute"></i>
-          </button>
-          <select name="tom-select" id="tom-select">
-            <option value="./sounds/tom-acoustic01.wav">Tom Classic</option>
-            <option value="./sounds/tom-analog.wav">Tom Analog</option>
-            <option value="./sounds/tom-chiptune.wav">Tom Chiptune</option>
-            <option value="./sounds/tom-fm.wav">Tom FM</option>
-            <option value="./sounds/tom-lofi.wav">Tim Lofi</option>
-            <option value="./sounds/tom-rototom.wav">Tom Rototom</option>
-          </select>
-        </div>
-        <div class="tom">
-          <div class="pad tom-pad b0"></div>
-          <div class="pad tom-pad b1"></div>
-          <div class="pad tom-pad b2"></div>
-          <div class="pad tom-pad b3"></div>
-          <div class="pad tom-pad b4"></div>
-          <div class="pad tom-pad b5"></div>
-          <div class="pad tom-pad b6"></div>
-          <div class="pad tom-pad b7"></div>
-        </div>
-      </div>
-
-      <div class="car-track">
-        <div class="controls">
-          <h1>EXHAUST</h1>
+          <h3>Exhaust</h3>
           <button data-track="8" class="mute exhaust-volumn">
             <i class="fas fa-volume-mute"></i>
           </button>
@@ -241,17 +137,19 @@
           </select>
         </div>
         <div class="exhaust">
-          <div class="pad exhuast-pad b0"></div>
-          <div class="pad exhuast-pad b1"></div>
-          <div class="pad exhuast-pad b2"></div>
-          <div class="pad exhuast-pad b3"></div>
-          <div class="pad exhuast-pad b4"></div>
-          <div class="pad exhuast-pad b5"></div>
-          <div class="pad exhuast-pad b6"></div>
-          <div class="pad exhuast-pad b7"></div>
+          <div class="pad exhaust-pad b0"></div>
+          <div class="pad exhaust-pad b1"></div>
+          <div class="pad exhaust-pad b2"></div>
+          <div class="pad exhaust-pad b3"></div>
+          <div class="pad exhaust-pad b4"></div>
+          <div class="pad exhaust-pad b5"></div>
+          <div class="pad exhaust-pad b6"></div>
+          <div class="pad exhaust-pad b7"></div>
         </div>
       </div>
 
+
+      <div class="play-tempo">
       <button class="play">Play</button>
       <div class="tempo">
         <input
@@ -263,6 +161,7 @@
         />
         <p>Tempo: <span class="tempo-nr">150</span></p>
       </div>
+      </div>
     </div>
 
     <audio class="kick-sound" src="./sounds/kick-classic.wav"></audio>
@@ -273,7 +172,7 @@
     <audio class="openhat-sound" src="./sounds/openhat-acoustic01.wav"></audio>
     <audio class="perc-sound" src="./sounds/perc-808.wav"></audio>
     <audio class="tom-sound" src="./sounds/tom-acoustic01.wav"></audio>
-    <audio class="tom-sound" src="./sounds/hellcat.mp3"></audio>
+    <audio class="exhaust-sound" src="./sounds/hellcat.mp3"></audio>
 
 
     <script src="./app.js"></script>
