--- a/index.html
+++ b/index.html
@@ -149,18 +149,8 @@
       </div>
 
 
-      <div class="play-tempo">
+      <div class="play-btn">
       <button class="play">Play</button>
-      <div class="tempo">
-        <input
-          type="range"
-          class="tempo-slider"
-          max="300"
-          min="20"
-          value="150"
-        />
-        <p>Tempo: <span class="tempo-nr">150</span></p>
-      </div>
       </div>
     </div>
 
