one issue remain

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <select name="kick-select" id="kick-select">
             <option value="./sounds/kick-classic.wav">Classic Kick</option>
             <option value="./sounds/kick-808.wav">808 Kick</option>
-            <option value="./sounds/kick-heavy.wav">Kick Heavy</option>
             <option value="./sounds/kick-big.wav">Kick Big</option>
             <option value="./sounds/kick-cultivator.wav">
               Kick Cultivator
@@ -51,10 +50,7 @@
           <select name="snare-select" id="snare-select">
             <option value="./sounds/snare-acoustic01.wav">Classic Snare</option>
             <option value="./sounds/snare-808.wav">808 Snare</option>
-            <option value="./sounds/snare-vinyl02.wav">Snare Vinyl</option>
-            <option value="./sounds/snare-big.wav">Snare Big</option>
-            <option value="./sounds/snare-lofi01.wav">Snare Lofi</option>
-            <option value="./sounds/snare-tape.wav">Snare Tape</option>
+            <option value="./sounds/snare-vinyl01.wav">Snare Vinyl</option>
           </select>
         </div>
         <div class="snare">
@@ -78,10 +74,6 @@
           <select name="hihat-select" id="hihat-select">
             <option value="./sounds/hihat-acoustic01.wav">Classic Hihat</option>
             <option value="./sounds/hihat-808.wav">808 Hihat</option>
-            <option value="./sounds/hihat-analog.wav">Hihat Analog</option>
-            <option value="./sounds/hihat-digital.wav">Hihat Digital</option>
-            <option value="./sounds/hihat-electro.wav">Hihat Electro</option>
-            <option value="./sounds/hihat-ring.wav">Hihat Ring</option>
           </select>
         </div>
         <div class="hihat">
@@ -107,9 +99,7 @@
             <option value="./sounds/openhat-acoustic01.wav">
               Openhat Classic
             </option>
-            <option value="./sounds/openhat-analog.wav">Openhat Analog</option>
-            <option value="./sounds/openhat-slick.wav">Openhat Slick</option>
-            <option value="./sounds/openhat-tight.wav">Openhat Tight</option>
+            <option value="./sounds/openhat-acoustic01.wav">Openhat Slick</option>
             <option value="./sounds/openhat-808.wav">Openhat 808</option>
           </select>
         </div>
@@ -133,7 +123,7 @@
             <i class="fas fa-volume-mute"></i>
           </button>
           <select name="car-select" id="car-select">
-            <option value="./sounds/hellcat.mp3">hellcat</option>
+            <option value="./sounds/helllcat.wav">hellcat</option>
           </select>
         </div>
         <div class="exhaust">
@@ -151,18 +141,18 @@
 
       <div class="play-btn">
       <button class="play">Play</button>
+    </div>
+      <div class="tempo">
+        <input type="range" class="tempo-slider" max="300" min="20" value="150">
+        <p>Tempo: <span class="tempo-nr">150</span></p>
       </div>
     </div>
 
     <audio class="kick-sound" src="./sounds/kick-classic.wav"></audio>
     <audio class="snare-sound" src="./sounds/snare-acoustic01.wav"></audio>
     <audio class="hihat-sound" src="./sounds/hihat-acoustic01.wav"></audio>
-    <audio class="clap-sound" src="./sounds/clap-analog.wav"></audio>
-    <audio class="crash-sound" src="./sounds/crash-acoustic.wav"></audio>
     <audio class="openhat-sound" src="./sounds/openhat-acoustic01.wav"></audio>
-    <audio class="perc-sound" src="./sounds/perc-808.wav"></audio>
-    <audio class="tom-sound" src="./sounds/tom-acoustic01.wav"></audio>
-    <audio class="exhaust-sound" src="./sounds/hellcat.mp3"></audio>
+    <audio class="exhaust-sound" src="./sounds/helllcat.wav"></audio>
 
 
     <script src="./app.js"></script>
